1) changed l to ell, 2) changed u\cdot v to u^tv, 3) added easy case of my big problem, 4) proved that hatcher's bundle is trivial

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -205,6 +205,8 @@
 	\expandafter\def\csname #1autorefname\endcsname{\makefirstuc{#1}}
 }%\def\lemmaautorefname{Lemma}
 %%theoremstyle
+\mynewtheorem{computation}
+\mynewtheorem{computations}
 \mynewtheorem{conjecture}
 \mynewtheorem{conjectures}
 \mynewtheorem{corollary}
