--- a/appendices/stiefel.tex
+++ b/appendices/stiefel.tex
@@ -31,7 +31,7 @@ and since $D$ is an open submanifold of $\mathbb{R}^{n\times k}$, we also get th
 
 We can now define the Stiefel manifold as the space of all \ul{orthonormal} $k$-frames:
 \begin{definition} Let $0<k\leq n$ be some natural numbers. Then, define the \ul{Stiefel} space $\StO{k}{n}{\mathbb{R}}=\StO{k}{n}$ as:
-\[\StO{k}{n}{\mathbb{R}}:=\left\{\left(\vec{v}_1,\ldots,\vec{v}_k\right)\in{\left(\mathbb{R}^n\right)}^k:\vec{v}_i\cdot\vec{v}_j=\delta_{i,j}\right\}\]
+\[\StO{k}{n}{\mathbb{R}}:=\left\{\left(\vec{v}_1,\ldots,\vec{v}_k\right)\in{\left(\mathbb{R}^n\right)}^k:\vec{v}_i^t\vec{v}_j=\delta_{i,j}\right\}\]
 equipped with the subspace topology. Every point in this set is called an \ul{orthonormal $k$-frame} of $\mathbb{R}^n$.
 \end{definition}
 Notice that we obviously have $\StO{k}{n}\subseteq\St{k}{n}$.
