sections done (without examples - not sure if needed)

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -45,3 +45,11 @@
 	journal = {arXiv preprint arXiv:1612.09375},
 	year = {2016}
 }
+
+@book{BU_Matousek,
+	author = "Ji\v{r}\'i Matou\v{s}ek",
+	title = "{Using the Borsuk-Ulam Theorem}",
+	publisher = "Springer",
+	year = "2008"
+	edition = "2nd"
+}
