compile error in bibsample removed

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -50,6 +50,6 @@
 	author = "Ji\v{r}\'i Matou\v{s}ek",
 	title = "{Using the Borsuk-Ulam Theorem}",
 	publisher = "Springer",
-	year = "2008"
-	edition = "2nd",
+	year = "2008",
+	edition = "2nd"
 }
