Better creation of new bundles

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -53,3 +53,11 @@
 	year = "2008",
 	edition = "2nd"
 }
+
+@book{husemoller,
+	author = "Dale Husemoller",
+	title = "Fibre Bundles",
+	publisher = "Springer",
+	year = "1993",
+	edition = "3rd"
+}
