--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -61,3 +61,10 @@
 	year = "1993",
 	edition = "3rd"
 }
+
+@book{bredon,
+	author = "Glen E. Bredon",
+	title = "Topology and Geometry",
+	publisher = "Springer",
+	year = "1993"
+}
