--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -68,3 +68,110 @@
 	publisher = "Springer",
 	year = "1993"
 }
+
+%extra pragmata pou evala sto introduction
+@article{tucker1935topological,
+  title={The topological congress in Moscow},
+  author={Tucker, AW},
+  journal={Bulletin of the American Mathematical Society},
+  volume={41},
+  number={11},
+  pages={764--764},
+  year={1935},
+  publisher={American Mathematical Society}
+}
+
+@book{cartan1955seminaire,
+  title={S{\'e}minaire Henri Cartan},
+  author={Cartan, Henri},
+  volume={6},
+  year={1955},
+  publisher={WA Benjamin}
+}
+
+@article{steenrod1951topology,
+  title={The topology of fiber bundles, volume 14 of},
+  author={Steenrod, Norman},
+  journal={Princeton Mathematical Series},
+  volume={16},
+  year={1951}
+}
+
+%@book{milnor1974characteristic,
+ % title={Characteristic classes},
+%  author={Milnor, John Willard and Stasheff, James D},
+%  number={76},
+%  year={1974},
+%  publisher={Princeton university press}
+%}
+
+@article{borel1955topology,
+  title={Topology of Lie groups and characteristic classes},
+  author={Borel, Armand},
+  journal={Bulletin of the American Mathematical society},
+  volume={61},
+  number={5},
+  pages={397--432},
+  year={1955}
+}
+
+@inproceedings{thom1952espaces,
+  title={Espaces fibr{\'e}s en sph{\`e}res et carr{\'e}s de Steenrod},
+  author={Thom, Ren{\'e}},
+  booktitle={Annales scientifiques de l'{\'E}cole normale sup{\'e}rieure},
+  volume={69},
+  pages={109--182},
+  year={1952}
+}
+
+@book{hirzebruch1956,
+  title={Neue topologische Methoden in der algebraischen Geometrie},
+  author={Hirzebruch, Friedrich},
+  volume={1},
+  year={1956},
+  publisher={Springer-Verlag}
+}
+
+@article{milnor1956construction,
+  title={Construction of universal bundles, I},
+  author={Milnor, John},
+  journal={Annals of Mathematics},
+  pages={272--284},
+  year={1956},
+  publisher={JSTOR}
+}
+
+@article{milnor1956construction2,
+  title={Construction of universal bundles, II},
+  author={Milnor, John},
+  journal={Annals of Mathematics},
+  pages={430--436},
+  year={1956},
+  publisher={JSTOR}
+}
+
+@article{kleiman1972schubert,
+  title={Schubert calculus},
+  author={Kleiman, Steven L and Laksov, Dan},
+  journal={The American Mathematical Monthly},
+  volume={79},
+  number={10},
+  pages={1061--1082},
+  year={1972},
+  publisher={Taylor \& Francis}
+}
+
+@book{schubert1879kalkul,
+  title={Kalk{\"u}l der abz{\"a}hlenden Geometrie},
+  author={Schubert, Hermann},
+  year={1879},
+  publisher={BG Teubner}
+}
+
+@book{fulton2013intersection,
+  title={Intersection theory},
+  author={Fulton, William},
+  volume={2},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
