--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -167,3 +167,9 @@
   year={2013},
   publisher={Springer Science \& Business Media}
 }
+
+@article{atiyah1961vector,
+  title={Vector bundles and homogeneous spaces},
+  author={Atiyah, Michael F and Hirzebruch, Friedrich},
+  year={1961}
+}
