evala allo ena reference gia grassmannians sto introduction

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -173,3 +173,14 @@
   author={Atiyah, Michael F and Hirzebruch, Friedrich},
   year={1961}
 }
+
+@article{guyot1985caracterisation,
+  title={Caract{\'e}risation par l'uniformit{\'e} des fibr{\'e}s universels sur la Grassmanienne},
+  author={Guyot, Michelle},
+  journal={Mathematische Annalen},
+  volume={270},
+  number={1},
+  pages={47--62},
+  year={1985},
+  publisher={Springer}
+}
