tautological vb, part 1

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -69,6 +69,15 @@
 	year = "1993"
 }
 
+@article{paracompactness,
+  title={Une g{\'e}n{\'e}ralisation des espaces compacts},
+  author={Jean Dieudonn{\'e}},
+  journal={Journal de mathématiques pures et appliqu\'ees},
+  volume={108},
+  pages={65--76},
+  year={1944}
+}
+
 
 @article{tucker1935topological,
   title={The topological congress in Moscow},
