SW axioms and basic facts

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -241,6 +241,8 @@
 \mynewtheorem{theorems}
 %%theoremstyle
 \theoremstyle{definition}
+\mynewtheorem{axiom}
+\mynewtheorem{axioms}
 \mynewtheorem{definition}
 \mynewtheorem{definitions}
 %%theoremstyle
@@ -262,7 +264,7 @@
 %\author{}
 %\date{}
 \newcommand\mytitle{Cohomology ring of the real Grassmannians\\
-with coefficients from $\mathbb{F}_2$}
+with coefficients from $\mathbb{Z}_2$}
 \renewcommand{\maketitle}{%
 	\begin{titlepage}
 	\newgeometry{left=0cm, right=0cm, top=0cm, bottom=0cm}
