allaxa ta margins prepei na ftiaxtoun akoma omws ayta pou petane sto perithwrio

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -75,7 +75,7 @@
 %\usepackage[Glenn]{fncychap} %fancy chapters, with option Glenn
 %\ChNameVar{\bfseries\Large} %edits word "chapter"
 \usepackage{geometry} %page size and margins
-\geometry{headheight=15pt}
+\geometry{headheight=15pt, left=20mm, right=20mm}
 \setlength\parindent{0pt} %no indentation
 \setlength\parskip{0.5em} %hspace between par
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
