--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -69,6 +69,13 @@
 	year = "1993"
 }
 
+@book{hatcher,
+	author = "Allen Hatcher",
+	title = "Algebraic Topology",
+	publisher = "Cambridge University Press",
+	year = "2001"
+}
+
 @article{paracompactness,
   title={Une g{\'e}n{\'e}ralisation des espaces compacts},
   author={Jean Dieudonn{\'e}},
