Cohomology of gr

--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -1,3 +1,12 @@
+@article{borel,
+	author= "A. Borel",
+	title={La cohomologie mod 2 de certains espaces homog\`enes},
+	journal = "Commentarii Mathematici Helvetici",
+	volume = "27",
+	pages = "115--207",
+	year = "1953"
+}
+
 @book{char_class,
 	author = "John Milnor and James Stasheff",
 	title = "{Characteristic Classes}",
@@ -85,6 +94,20 @@
   year={1944}
 }
 
+@book{lang,
+	title={Algebra},
+	author={Serge Lang},
+	publisher={Springer},
+	year="2002",
+	edition="3rd"
+}
+
+@book{stanley2,
+	title={Enumerative Combinatorics, Volume 2},
+	author={Richard P. Stanley},
+	publisher={Cambridge University Press},
+	year=2001
+}
 
 @article{tucker1935topological,
   title={The topological congress in Moscow},
