--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -253,7 +253,7 @@
 \mynewtheorem{definition}
 \mynewtheorem{definitions}
 %%theoremstyle
-\theoremstyle{note}
+\theoremstyle{remark}
 \mynewtheorem{goal}
 \mynewtheorem{goals}
 \mynewtheorem{note}
@@ -328,8 +328,8 @@ Berlin, den 28. Juni 2022.
 \mainmatter
 	\include{chapters/intro}
 	\include{chapters/grassmannian}
-%	\include{chapters/vector_bundles}
-%	\include{chapters/cohomology}
+	\include{chapters/vector_bundles}
+	\include{chapters/cohomology}
 	\begin{myappendix}
 %	\include{appendices/topology}
 %	\include{appendices/fiber_bundles}
