--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -85,6 +85,13 @@
 	year = "2001"
 }
 
+@book{alg_top_homotopy,
+	author = "Marcelo Aguilar and Samuel Gitler and Carlos Prieto",
+	title = "Algebraic Topology from a Homotopical Viewpoint",
+	publisher = "Springer",
+	year = "2002"
+}
+
 @article{paracompactness,
   title={Une g{\'e}n{\'e}ralisation des espaces compacts},
   author={Jean Dieudonn{\'e}},
