--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -283,8 +283,8 @@ with coefficients from $\mathbb{Z}_2$}
 	Dimitrios Bogiokas\\
 	\ \\
 	\ \\
-	Erstgutachter:\\
-	Zweitgutachter:\\
+	Erstgutachter: Prof. Pavle Blagojevi\'c\\
+	Zweitgutachter: Prof. Florian Frick\\
 	\ \\
 	\ \\
 	\ \\
@@ -308,17 +308,15 @@ with coefficients from $\mathbb{Z}_2$}
 	\renewcommand{\thepage}{C\arabic{page}}
 	\thispagestyle{empty}
 	\maketitle
+	\newpage\
+	\thispagestyle{empty}
 	\newpage
 	\thispagestyle{empty}
 %everything that goes in the beginning
 \pagenumbering{gobble}
-\chapter*{Eidesstattliche Erkl\"{a}rung}
-Hiermit erkl\"{a}re ich, die vorliegende Arbeit selbst\"{a}ndig und nur unter Benutzung der angegebenen Hilfsmittel angefertigt zu haben.
-Die Arbeit hat in gleicher oder \"{a}nlicher Form noch keiner Pr\"{u}fungsbeh\"{o}rde vorgelegen und ist noch nicht ver\"{o}ffentlicht.
-
-Berlin, den 28. Juni 2022.
-\chapter*{Abstract}
-\chapter*{Zusammenfassung}
+\include{chapters/erklarung}
+\include{chapters/abstract}
+\include{chapters/zusammenfassung}
 \frontmatter
 	\pagenumbering{roman}
 	%\\\vspace{100pt}\include{intro}
@@ -330,10 +328,6 @@ Berlin, den 28. Juni 2022.
 	\include{chapters/grassmannian}
 	\include{chapters/vector_bundles}
 	\include{chapters/cohomology}
-	\begin{myappendix}
-%	\include{appendices/topology}
-%	\include{appendices/fiber_bundles}
-	\end{myappendix}
 \backmatter
 	\bibliographystyle{alpha}
 	\bibliography{bibliography/bibsample}
