--- a/bibliography/bibsample.bib
+++ b/bibliography/bibsample.bib
@@ -199,7 +199,7 @@
   publisher={Taylor \& Francis}
 }
 
-@book{schubert1879kalkul,
+@book{schubert,
   title={Kalk{\"u}l der abz{\"a}hlenden Geometrie},
   author={Schubert, Hermann},
   year={1879},
@@ -230,3 +230,72 @@
   year={1985},
   publisher={Springer}
 }
+
+@article{ehresmann,
+  title={{\oe}uvres compl{\`e}tes et comment{\'e}es},
+  author={Charles Ehresmann},
+  year="1933"
+}
+
+@article{ehresmann2,
+	title={Sur la topologie de certaines variétés algébriques réelles},
+	author={Charles Ehresmann},
+	year="1937"
+}
+
+
+@article{chern,
+ ISSN = {0003486X},
+ URL = {http://www.jstor.org/stable/1969285},
+ author = {Shiing-Shen Chern},
+ journal = {Annals of Mathematics},
+ number = {2},
+ pages = {362--372},
+ publisher = {Annals of Mathematics},
+ title = {On the Multiplication in the Characteristic Ring of a Sphere Bundle},
+ urldate = {2022-06-28},
+ volume = {49},
+ year = {1948}
+}
+
+@article{stiefel,
+  title={Richtungsfelder und Fernparallelismus in n-dimensionalen Mannigfaltigkeiten},
+  author={Eduard Stiefel},
+  journal={Commentarii Mathematici Helvetici},
+  year={1935},
+  volume={8},
+  pages={305-353}
+}
+
+@article{whitney,
+  title={Sphere-Spaces.},
+  author={Hassler Whitney},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  year={1935},
+  volume={21 7},
+  pages={
+          464-8
+        }
+}
+
+@article{whitneyCohom,
+	title={Topological properties of differentiable Manifolds},
+	author={Hassler Whitney},
+	year="1937"
+}
+
+
+@article{wu,
+ ISSN = {0003486X},
+ URL = {http://www.jstor.org/stable/1969049},
+ author = {Wu Wen-Tsun},
+ journal = {Annals of Mathematics},
+ number = {3},
+ pages = {641--653},
+ publisher = {Annals of Mathematics},
+ title = {On the Product of Sphere Bundles and the Duality Theorem Modulo Two},
+ urldate = {2022-06-28},
+ volume = {49},
+ year = {1948}
+}
+
