--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -317,6 +317,7 @@ with coefficients from $\mathbb{Z}_2$}
 \include{chapters/erklarung}
 \include{chapters/abstract}
 \include{chapters/zusammenfassung}
+\include{chapters/acknowledgements}
 \frontmatter
 	\pagenumbering{roman}
 	%\\\vspace{100pt}\include{intro}
